--- a/frontend-2.1.3/src/app/profile/password/password.component.html
+++ b/frontend-2.1.3/src/app/profile/password/password.component.html
@@ -1,1 +1,34 @@
-password
+<md-card>
+  <md-card-title>Form validation</md-card-title>
+  <md-card-subtitle>Angular2 custom validation</md-card-subtitle>
+  <form [formGroup]="form">
+    <md-card-content>
+      <div class="mb-1">
+        <md-input-container style="width: 100%">
+          <input mdInput placeholder="Password" [formControl]="form.controls['oldPassword']">
+        </md-input-container>
+        <small *ngIf="form.controls['oldPassword'].hasError('required') && form.controls['oldPassword'].touched" class="mat-text-warn">You must include old password.</small>
+      </div>
+
+      <div class="mb-1">
+        <md-input-container style="width: 100%">
+          <input mdInput placeholder="Password" [formControl]="form.controls['password']" type="password">
+        </md-input-container>
+        <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="mat-text-warn">You must include password.</small>
+      </div>
+
+      <div class="mb-1">
+        <md-input-container style="width: 100%">
+          <input mdInput placeholder="Confirm Password" [formControl]="form.controls['confirmPassword']" type="password">
+        </md-input-container>
+        <small *ngIf="form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched" class="mat-text-warn">You must include confirm password.</small>
+        <small *ngIf="form.controls['confirmPassword'].errors?.equalTo" class="mat-text-warn">Passwords do not math.</small>
+      </div>
+
+    </md-card-content>
+    <hr>
+    <md-card-actions>
+      <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">Submit</button>
+    </md-card-actions>
+  </form>
+</md-card>
