--- a/frontend-2.1.3/src/app/profile/configNotification/configNotification.component.html
+++ b/frontend-2.1.3/src/app/profile/configNotification/configNotification.component.html
@@ -1,1 +1,23 @@
-config notification
+<md-card>
+  <md-card-title>Slide Toggle</md-card-title>
+  <md-card-subtitle>MdSlideToggle is a two-state control, which can be also called switch.</md-card-subtitle>
+  <md-card-content>
+    <md-slide-toggle color="primary" [(ngModel)]="firstToggle">
+      Default Slide Toggle
+    </md-slide-toggle>
+
+    <p>Example where the slide toggle is required inside of a form.</p>
+
+    <form #form="ngForm" (ngSubmit)="onFormSubmit()" ngNativeValidate>
+
+      <md-slide-toggle name="slideToggle" required ngModel>
+        Slide Toggle
+      </md-slide-toggle>
+
+      <p>
+        <button md-raised-button type="submit">Submit Form</button>
+      </p>
+
+    </form>
+  </md-card-content>
+</md-card>
