--- a/frontend-2.1.3/src/app/profile/emailSettings/emailSettings.component.html
+++ b/frontend-2.1.3/src/app/profile/emailSettings/emailSettings.component.html
@@ -1,1 +1,8 @@
-email settings
+<md-card>
+  <md-card-title>Buttons</md-card-title>
+  <md-card-subtitle>md-button is an HTML button or a tag enhanced with styling and animation to match the Material Design button spec</md-card-subtitle>
+  <md-card-content>
+    <gmail-settings></gmail-settings>
+    <internet-mail-settings></internet-mail-settings>
+  </md-card-content>
+</md-card>
