--- a/frontend-2.1.3/src/app/profile/profile.component.html
+++ b/frontend-2.1.3/src/app/profile/profile.component.html
@@ -1,16 +1,26 @@
 <md-tab-group>
   <md-tab>
     <ng-template md-tab-label>
-      The <em>{{ 'as' | translate }}</em> pasta
+      {{ 'profile.edit' | translate }}
     </ng-template>
-    <h1>Best pasta restaurants</h1>
-    <p>...</p>
+    <my-profile-edit></my-profile-edit>
   </md-tab>
   <md-tab>
     <ng-template md-tab-label>
-      <md-icon>thumb_down</md-icon> The worst sushi
+      {{ 'profile.changePass' | translate }}
     </ng-template>
-    <h1>Terrible sushi restaurants</h1>
-    <p>...</p>
+    <my-profile-password></my-profile-password>
+  </md-tab>
+  <md-tab>
+    <ng-template md-tab-label>
+      {{ 'profile.configNotification' | translate }}
+    </ng-template>
+    <my-profile-config-notification></my-profile-config-notification>
+  </md-tab>
+  <md-tab>
+    <ng-template md-tab-label>
+      {{ 'profile.emailSettings' | translate }}
+    </ng-template>
+    <my-profile-email-settings></my-profile-email-settings>
   </md-tab>
 </md-tab-group>
