--- a/frontend-2.1.3/src/app/profile/edit/edit.component.html
+++ b/frontend-2.1.3/src/app/profile/edit/edit.component.html
@@ -39,9 +39,8 @@
       </div>
 
     </md-card-content>
-    <hr>
     <md-card-actions>
       <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">Submit</button>
     </md-card-actions>
   </form>
-  <!-- </md-card> -->
+</md-card>
