--- a/frontend-2.1.3/src/assets/styles/scss/core/_main-sidebar.scss
+++ b/frontend-2.1.3/src/assets/styles/scss/core/_main-sidebar.scss
@@ -38,6 +38,7 @@ md-sidenav.sidebar-panel {
     padding: 0 16px;
   }
   .sub-menu {
+    width: 200%;
     padding-top: 0;
     overflow: hidden;
     transition: .5s cubic-bezier(.35, 0, .25, 1);
@@ -193,12 +194,12 @@ md-sidenav.sidebar-panel {
         display: block!important;
         visibility: visible;
       }
-      
+
       .mat-list-item > .mat-list-item-content > a > .menu-caret,
       .mat-list-item > .mat-list-item-content > a > [fxflex], {
         display: none;
       }
-      
+
       .sub-menu {
         display: none!important;
         visibility: hidden;
@@ -279,7 +280,7 @@ md-sidenav.sidebar-panel {
           right: auto;
           left: 16px;
         }
-        
+
         .sub-menu {
           left: auto;
           right: 100%;
@@ -287,7 +288,7 @@ md-sidenav.sidebar-panel {
             padding-left: 16px;
             padding-right: 16px;
           }
-        } 
+        }
       }
     }
   }
@@ -295,7 +296,7 @@ md-sidenav.sidebar-panel {
   .app-dark {
     &.compact-sidebar, .compact-sidebar {
       md-sidenav.sidebar-panel .sub-menu {
-        background: mat-color($dark-background, card); 
+        background: mat-color($dark-background, card);
       }
     }
   }
