--- a/frontend-2.1.3/src/app/profile/emailSettings/internetMailSettings/internetMailSettings.component.html
+++ b/frontend-2.1.3/src/app/profile/emailSettings/internetMailSettings/internetMailSettings.component.html
@@ -1,80 +1,82 @@
 <div class="pb-1">
   <md-card>
     <md-card-title>
-      <p>Internet mail</p>
+      {{'profile.mailSetting.internetMail.title' | translate}}
     </md-card-title>
-    <md-card-subtitle>setting</md-card-subtitle>
+    <!-- <md-card-subtitle>setting</md-card-subtitle> -->
 
     <form [formGroup]="form" novalidate>
       <md-card-content>
         <div class="mb-1">
           <md-input-container style="width: 100%">
-            <input mdInput placeholder="Account name" [formControl]="form.controls['accountName']" type="text">
+            <input mdInput placeholder="{{'profile.mailSetting.internetMail.accountName' | translate}}" [formControl]="form.controls['accountName']" type="text">
           </md-input-container>
-          <small *ngIf="form.controls['accountName'].hasError('required') && form.controls['accountName'].touched" class="mat-text-warn">You must include an account name.</small>
+          <small *ngIf="form.controls['accountName'].hasError('required') && form.controls['accountName'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
         </div>
 
         <div class="mb-1">
           <md-input-container style="width: 100%">
-            <input mdInput placeholder="Display name" [formControl]="form.controls['displayName']" type="text">
+            <input mdInput placeholder="{{'profile.mailSetting.internetMail.displayName' | translate}}" [formControl]="form.controls['displayName']" type="text">
           </md-input-container>
-          <small *ngIf="form.controls['displayName'].hasError('required') && form.controls['displayName'].touched" class="mat-text-warn">You must include a display name.</small>
+          <small *ngIf="form.controls['displayName'].hasError('required') && form.controls['displayName'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
         </div>
 
         <div class="mb-1">
           <md-input-container style="width: 100%">
-            <input mdInput placeholder="Password" [formControl]="form.controls['password']" type="password">
+            <input mdInput placeholder="{{'profile.mailSetting.internetMail.password' | translate}}" [formControl]="form.controls['password']" type="password">
           </md-input-container>
-          <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="mat-text-warn">You must include password.</small>
+          <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
         </div>
 
         <div class="mb-1">
           <md-input-container style="width: 100%">
-            <input mdInput placeholder="Incoming IMAP server" [formControl]="form.controls['incomingImapServer']" type="text">
+            <input mdInput placeholder="{{'profile.mailSetting.internetMail.incomingImapServer' | translate}}" [formControl]="form.controls['incomingImapServer']" type="text">
           </md-input-container>
-          <small *ngIf="form.controls['incomingImapServer'].hasError('required') && form.controls['incomingImapServer'].touched" class="mat-text-warn">You must include IMAP server.</small>
+          <small *ngIf="form.controls['incomingImapServer'].hasError('required') && form.controls['incomingImapServer'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
         </div>
 
         <div class="mb-1">
           <md-input-container style="width: 100%">
-            <input mdInput placeholder="Incoming IMAP port" [formControl]="form.controls['incomingImapPort']" type="number">
+            <input mdInput placeholder="{{'profile.mailSetting.internetMail.incomingImapPort' | translate}}" [formControl]="form.controls['incomingImapPort']" type="number">
           </md-input-container>
-          <small *ngIf="form.controls['incomingImapPort'].hasError('required') && form.controls['incomingImapPort'].touched" class="mat-text-warn">You must include IMAP port.</small>
+          <small *ngIf="form.controls['incomingImapPort'].hasError('required') && form.controls['incomingImapPort'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
+          <small *ngIf="form.controls['incomingImapPort'].hasError('number')" class="mat-text-warn">{{'validate.invalid.format' | translate}}</small>
         </div>
 
         <div class="mb-1">
           <section>
             <md-checkbox [checked]="checked">
-              Incoming use SSL
+              {{'profile.mailSetting.internetMail.incomingSsl' | translate}}
             </md-checkbox>
           </section>
         </div>
 
         <div class="mb-1">
           <md-input-container style="width: 100%">
-            <input mdInput placeholder="Outgoing IMAP server" [formControl]="form.controls['outgoingImapServer']" type="text">
+            <input mdInput placeholder="{{'profile.mailSetting.internetMail.outgoingImapServer' | translate}}" [formControl]="form.controls['outgoingImapServer']" type="text">
           </md-input-container>
-          <small *ngIf="form.controls['outgoingImapServer'].hasError('required') && form.controls['outgoingImapServer'].touched" class="mat-text-warn">You must include IMAP server.</small>
+          <small *ngIf="form.controls['outgoingImapServer'].hasError('required') && form.controls['outgoingImapServer'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
         </div>
 
         <div class="mb-1">
           <md-input-container style="width: 100%">
-            <input mdInput placeholder="Outgoing IMAP port" [formControl]="form.controls['outgoingImapPort']" type="number">
+            <input mdInput placeholder="{{'profile.mailSetting.internetMail.outgoingImapPort' | translate}}" [formControl]="form.controls['outgoingImapPort']" type="number">
           </md-input-container>
-          <small *ngIf="form.controls['outgoingImapPort'].hasError('required') && form.controls['outgoingImapPort'].touched" class="mat-text-warn">You must include IMAP port.</small>
+          <small *ngIf="form.controls['outgoingImapPort'].hasError('required') && form.controls['outgoingImapPort'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
+          <small *ngIf="form.controls['incomingImapPort'].hasError('number')" class="mat-text-warn">{{'validate.invalid.format' | translate}}</small>
         </div>
 
         <div class="mb-1">
           <section>
             <md-checkbox [checked]="checked">
-              Outgoing use SSL
+              {{'profile.mailSetting.internetMail.outgoingSsl' | translate}}
             </md-checkbox>
           </section>
         </div>
       </md-card-content>
       <hr>
       <md-card-actions>
-        <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">Submit</button>
+        <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">{{'button.save' | translate}}</button>
       </md-card-actions>
     </form>
   </md-card>
