--- a/frontend-2.1.3/src/app/profile/password/password.component.html
+++ b/frontend-2.1.3/src/app/profile/password/password.component.html
@@ -1,33 +1,33 @@
 <md-card>
-  <md-card-title>Form validation</md-card-title>
-  <md-card-subtitle>Angular2 custom validation</md-card-subtitle>
+  <md-card-title>{{'profile.password.title' | translate}}</md-card-title>
+  <md-card-subtitle>{{'profile.password.title.description' | translate}}</md-card-subtitle>
   <form [formGroup]="form">
     <md-card-content>
       <div class="mb-1">
         <md-input-container style="width: 100%">
-          <input mdInput placeholder="Password" [formControl]="form.controls['oldPassword']">
+          <input mdInput placeholder="{{'profile.password.oldPassword'| translate}}" [formControl]="form.controls['oldPassword']">
         </md-input-container>
-        <small *ngIf="form.controls['oldPassword'].hasError('required') && form.controls['oldPassword'].touched" class="mat-text-warn">You must include old password.</small>
+        <small *ngIf="form.controls['oldPassword'].hasError('required') && form.controls['oldPassword'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
       </div>
 
       <div class="mb-1">
         <md-input-container style="width: 100%">
-          <input mdInput placeholder="Password" [formControl]="form.controls['password']" type="password">
+          <input mdInput placeholder="{{'profile.password.password' | translate}}" [formControl]="form.controls['password']" type="password">
         </md-input-container>
-        <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="mat-text-warn">You must include password.</small>
+        <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
       </div>
 
       <div class="mb-1">
         <md-input-container style="width: 100%">
-          <input mdInput placeholder="Confirm Password" [formControl]="form.controls['confirmPassword']" type="password">
+          <input mdInput placeholder="{{'profile.password.confirmPassword' | translate}}" [formControl]="form.controls['confirmPassword']" type="password">
         </md-input-container>
-        <small *ngIf="form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched" class="mat-text-warn">You must include confirm password.</small>
-        <small *ngIf="form.controls['confirmPassword'].errors?.equalTo" class="mat-text-warn">Passwords do not math.</small>
+        <small *ngIf="form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
+        <small *ngIf="form.controls['confirmPassword'].errors?.equalTo" class="mat-text-warn">{{'validate.password.notMatch' | translate}}</small>
       </div>
 
     </md-card-content>
     <md-card-actions>
-      <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">Submit</button>
+      <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">{{'button.save' | translate}}</button>
     </md-card-actions>
   </form>
 </md-card>
