--- a/frontend-2.1.3/src/app/session/forgot/forgot.component.html
+++ b/frontend-2.1.3/src/app/session/forgot/forgot.component.html
@@ -6,21 +6,21 @@
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="text-xs-center pb-1">
               <img src="assets/images/logo-dark.png" alt="" />
-              <p class="mat-text-muted">Enter your email and we'll send you instructions on how to reset your password.</p>
+              <p class="mat-text-muted">{{'forgot.subTitile' | translate}}</p>
             </div>
             <div fxLayout="column" fxLayoutAlign="space-around">
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput placeholder="Email address" [(ngModel)]="email" type="email" [formControl]="form.controls['email']">
+                  <input mdInput placeholder="{{'forgot.email' | translate}}" [(ngModel)]="email" type="email" [formControl]="form.controls['email']">
                 </md-input-container>
-                <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="mat-text-warn">You must include an email address.</small>
-                <small *ngIf="form.controls['email'].errors?.email && form.controls['email'].touched" class="mat-text-warn">You must include a valid email address.</small>
+                <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
+                <small *ngIf="form.controls['email'].errors?.email && form.controls['email'].touched" class="mat-text-warn">{{'validate.invalid.format' | translate}}</small>
               </div>
-              <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">Login</button>
+              <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">{{'forgot.button.login' | translate}}</button>
             </div>
             <div class="pt-1 pb-1 text-xs-center">
-              <a [routerLink]="['/session/signin']">Access your account</a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a [routerLink]="['/session/signup']">Sign up for a new account</a>
+              <a [routerLink]="['/session/signin']">{{'forgot.link.login' | translate}}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a [routerLink]="['/session/signup']">{{'forgot.link.signup' | translate}}</a>
             </div>
           </form>
         </md-card-content>
