--- a/frontend-2.1.3/src/app/layouts/admin/admin-layout.component.html
+++ b/frontend-2.1.3/src/app/layouts/admin/admin-layout.component.html
@@ -17,7 +17,7 @@
     </button>
     <button (click)="end.toggle()" md-icon-button class="ml-xs overflow-visible">
       <md-icon>notifications</md-icon>
-      <span class="notification-label">5</span>
+      <span class="notification-label">{{notificationUnreadCount}}</span>
     </button>
     <button [md-menu-trigger-for]="user" md-icon-button class="ml-xs">
       <md-icon>person</md-icon>
@@ -27,13 +27,19 @@
         <md-icon>settings</md-icon>
         Settings
       </button>
-      <button md-menu-item>
+      <button md-menu-item routerLink="/profile">
         <md-icon>account_box</md-icon>
-        Profile
+        {{'manage.profile' | translate}}
       </button>
-      <button md-menu-item>
-        <md-icon>notifications_off</md-icon>
-        Disable notifications
+      <button md-menu-item (click)="toggleNotification();$event.stopPropagation()">
+        <div *ngIf="!notificationEnable">
+          <md-icon>notifications_off</md-icon>
+          {{'menu.disable.notification' | translate}}
+        </div>
+        <div *ngIf="notificationEnable">
+          <md-icon>notifications_on</md-icon>
+          {{'menu.enable.notification'  | translate}}
+        </div>
       </button>
       <button md-menu-item (click)="signOut()">
         <md-icon>exit_to_app</md-icon>
@@ -88,7 +94,7 @@
     </md-sidenav>
     <md-sidenav #end align="end" class="chat-panel" mode="over" opened="false">
       <md-tab-group [selectedIndex]="1" md-stretch-tabs>
-        <md-tab>
+        <!-- <md-tab>
           <ng-template md-tab-label>Today</ng-template>
           <div class="scroll">
             <md-list class="pt-1 pb-1">
@@ -162,57 +168,33 @@
               </md-list-item>
             </md-nav-list>
           </div>
-        </md-tab>
+        </md-tab> -->
         <md-tab>
           <ng-template md-tab-label>Notifications</ng-template>
           <div class="scroll">
             <md-nav-list>
               <md-list-item>
-                <md-icon md-list-avatar class="mat-text-primary">people</md-icon>
-                <h4 md-line>Social</h4>
-                <p md-line>Ligula Purus Adipiscing</p>
-              </md-list-item>
-              <md-list-item>
-                <md-icon md-list-avatar class="mat-text-warn">local_offer</md-icon>
-                <h4 md-line>Promotions</h4>
-                <p md-line>Etiam Ligula Dapibus</p>
-              </md-list-item>
-              <md-list-item>
-                <md-icon md-list-avatar class="mat-text-accent">info</md-icon>
-                <h4 md-line>Updates</h4>
-                <p md-line>Sollicitudin Euismod Fringilla</p>
-              </md-list-item>
-
-              <md-list-item>
-                <md-icon md-list-avatar class="mat-indigo">delete_sweep</md-icon>
-                <h4 md-line>Removed 6 items from task list</h4>
-                <span class="text-md mat-text-muted" md-line>{{ 1427207139000 | date: 'fullDate' }}</span>
-              </md-list-item>
-              <md-list-item>
-                <md-icon md-list-avatar>check_circle</md-icon>
-                <h4 md-line>Completed 2 projects</h4>
-                <span class="text-md mat-text-muted" md-line>{{ 1427412725000 | date: 'fullDate' }}</span>
-              </md-list-item>
-              <md-list-item>
-                <md-icon md-list-avatar>notifications_paused</md-icon>
-                <h4 md-line>Muted notifications</h4>
-                <span class="text-md mat-text-muted" md-line>{{ 1427546580000 | date: 'fullDate' }}</span>
-              </md-list-item>
-              <md-list-item>
-                <md-icon md-list-avatar>person_add</md-icon>
-                <h4 md-line>Added Joel to contact list</h4>
-                <span class="text-md mat-text-muted" md-line>{{ 1428275520000 | date: 'fullDate' }}</span>
-              </md-list-item>
-              <md-list-item>
-                <md-icon md-list-avatar>phone_missed</md-icon>
-                <h4 md-line>Missed live call from Ellie</h4>
+                <md-icon md-list-avatar>notifications_active</md-icon>
+                <h4 md-line>NOTIFY_TASK_(STATUS)</h4>
                 <span class="text-md mat-text-muted" md-line>{{ 1428830580000 | date: 'fullDate' }}</span>
               </md-list-item>
               <md-list-item>
-                <md-icon md-list-avatar>group_add</md-icon>
-                <h4 md-line>You've been added to HR group</h4>
-                <span class="text-md mat-text-muted" md-line>{{ 1429363920000 | date: 'fullDate' }}</span>
+                <md-icon md-list-avatar>alarm</md-icon>
+                <h4 md-line>REMINDER_TASK_(STATUS)</h4>
+                <span class="text-md mat-text-muted" md-line>{{ 1428830580000 | date: 'fullDate' }}</span>
               </md-list-item>
+
+              <md-list-item>
+                <md-icon md-list-avatar>notifications_active</md-icon>
+                <h4 md-line>NOTIFY_DEAL_(STATUS)</h4>
+                <span class="text-md mat-text-muted" md-line>{{ 1428830580000 | date: 'fullDate' }}</span>
+              </md-list-item>
+              <md-list-item>
+                <md-icon md-list-avatar>alarm</md-icon>
+                <h4 md-line>REMINDER_DEAL_(STATUS)</h4>
+                <span class="text-md mat-text-muted" md-line>{{ 1428830580000 | date: 'fullDate' }}</span>
+              </md-list-item>
+
             </md-nav-list>
           </div>
         </md-tab>
