--- a/frontend-2.1.3/src/app/profile/emailSettings/gmailSettings/gmailSettings.component.html
+++ b/frontend-2.1.3/src/app/profile/emailSettings/gmailSettings/gmailSettings.component.html
@@ -1,12 +1,12 @@
 <div class="pb-1">
   <md-card>
     <md-card-title>
-      Gmail
+      {{'profile.mailSetting.gmail.title' | translate}}
     </md-card-title>
-    <md-card-subtitle>setting</md-card-subtitle>
+    <!-- <md-card-subtitle>setting</md-card-subtitle> -->
     <form novalidate>
       <md-card-actions>
-        <button md-raised-button color="primary" class="mr-1">Connect gmail</button>
+        <button md-raised-button color="primary" class="mr-1">{{'profile.mailSetting.gmail.button.connect' | translate}}</button>
       </md-card-actions>
     </form>
   </md-card>
