--- a/frontend-2.1.3/src/app/session/resetPassword/resetPassword.component.html
+++ b/frontend-2.1.3/src/app/session/resetPassword/resetPassword.component.html
@@ -6,27 +6,27 @@
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="text-xs-center pb-1">
               <img src="assets/images/logo-dark.png" alt="" />
-              <p class="mat-text-muted">Enter your new password.</p>
+              <p class="mat-text-muted">{{'resetPassword.subTitile' | translate}}</p>
             </div>
             <div fxLayout="column" fxLayoutAlign="space-around">
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput type="password" [(ngModel)]="password" placeholder="Password" [formControl]="form.controls['password']">
+                  <input mdInput type="password" [(ngModel)]="password" placeholder="{{'resetPassword.password' | translate}}" [formControl]="form.controls['password']">
                 </md-input-container>
-                <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="mat-text-warn">You must include password.</small>
+                <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
               </div>
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput placeholder="Confirm Password" [(ngModel)]="confirmPassword" [formControl]="form.controls['confirmPassword']" type="password">
+                  <input mdInput placeholder="{{'resetPassword.confirmPassword' | translate}}" [(ngModel)]="confirmPassword" [formControl]="form.controls['confirmPassword']" type="password">
                 </md-input-container>
-                <small *ngIf="form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched" class="mat-text-warn">You must include confirm password.</small>
-                <small *ngIf="form.controls['confirmPassword'].errors?.equalTo" class="mat-text-warn">Passwords do not math.</small>
+                <small *ngIf="form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
+                <small *ngIf="form.controls['confirmPassword'].errors?.equalTo" class="mat-text-warn">{{'validate.password.notMatch' | translate}}</small>
               </div>
-              <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">Submit</button>
+              <button md-raised-button color="primary" type="submit" [disabled]="!form.valid">{{'resetPassword.button.submit' | translate}}</button>
             </div>
             <div class="pt-1 pb-1 text-xs-center">
-              <a [routerLink]="['/session/forgot']">Forgot password?</a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a [routerLink]="['/session/signup']">Sign up for a new account.</a>
+              <a [routerLink]="['/session/forgot']">{{'resetPassword.link.forgot' | translate}}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a [routerLink]="['/session/signup']">{{'resetPassword.link.signup' | translate}}</a>
             </div>
           </form>
         </md-card-content>
