--- a/frontend-2.1.3/src/app/session/signup/signup.component.html
+++ b/frontend-2.1.3/src/app/session/signup/signup.component.html
@@ -6,63 +6,63 @@
           <form [formGroup]="form" (ngSubmit)="onSubmit()">
             <div class="text-xs-center pb-1">
               <img src="assets/images/logo-dark.png" alt="" />
-              <p class="mat-text-muted">Create an app id to continue.</p>
+              <p class="mat-text-muted">{{'signup.subTitile' | translate}}</p>
             </div>
             <div fxLayout="column" fxLayoutAlign="space-around">
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput placeholder="Name" [(ngModel)]="name" type="text" [formControl]="form.controls['name']">
+                  <input mdInput placeholder="{{'signup.name' | translate}}" [(ngModel)]="name" type="text" [formControl]="form.controls['name']">
                 </md-input-container>
-                <small *ngIf="form.controls['name'].hasError('required') && form.controls['name'].touched" class="mat-text-warn">You must include an username.</small>
+                <small *ngIf="form.controls['name'].hasError('required') && form.controls['name'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
               </div>
 
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput placeholder="Username" [(ngModel)]="username" type="text" [formControl]="form.controls['username']">
+                  <input mdInput placeholder="{{'signup.username' | translate}}" [(ngModel)]="username" type="text" [formControl]="form.controls['username']">
                 </md-input-container>
-                <small *ngIf="form.controls['username'].hasError('required') && form.controls['username'].touched" class="mat-text-warn">You must include an username.</small>
+                <small *ngIf="form.controls['username'].hasError('required') && form.controls['username'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
               </div>
 
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput type="password" [(ngModel)]="password" placeholder="Password" [formControl]="form.controls['password']">
+                  <input mdInput type="password" [(ngModel)]="password" placeholder="{{'signup.password' | translate}}" [formControl]="form.controls['password']">
                 </md-input-container>
-                <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="mat-text-warn">You must include password.</small>
+                <small *ngIf="form.controls['password'].hasError('required') && form.controls['password'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
               </div>
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput placeholder="Confirm Password" [(ngModel)]="confirmPassword" [formControl]="form.controls['confirmPassword']" type="password">
+                  <input mdInput placeholder="{{'signup.confirmPassword' | translate}}" [(ngModel)]="confirmPassword" [formControl]="form.controls['confirmPassword']" type="password">
                 </md-input-container>
-                <small *ngIf="form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched" class="mat-text-warn">You must include confirm password.</small>
-                <small *ngIf="form.controls['confirmPassword'].errors?.equalTo" class="mat-text-warn">Passwords do not math.</small>
+                <small *ngIf="form.controls['confirmPassword'].hasError('required') && form.controls['confirmPassword'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
+                <small *ngIf="form.controls['confirmPassword'].errors?.equalTo" class="mat-text-warn">{{'validate.password.notMatch' | translate}}</small>
               </div>
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput placeholder="Email address" type="email" [(ngModel)]="email" [formControl]="form.controls['email']">
+                  <input mdInput placeholder="{{'signup.email' | translate}}" type="email" [(ngModel)]="email" [formControl]="form.controls['email']">
                 </md-input-container>
-                <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="mat-text-warn">You must include an email address.</small>
-                <small *ngIf="form.controls['email'].errors?.email && form.controls['email'].touched" class="mat-text-warn">You must include a valid email address.</small>
+                <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
+                <small *ngIf="form.controls['email'].errors?.email && form.controls['email'].touched" class="mat-text-warn">{{'validate.invalid.format' | translate}}</small>
               </div>
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput placeholder="Phone" type="number" [(ngModel)]="phone" [formControl]="form.controls['phone']" number>
+                  <input mdInput placeholder="{{'signup.phone' | translate}}" type="number" [(ngModel)]="phone" [formControl]="form.controls['phone']" number>
                 </md-input-container>
-                <small *ngIf="form.controls['phone'].errors?.number" class="mat-text-warn">You must include a valid phone number.</small>
+                <small *ngIf="form.controls['phone'].errors?.number" class="mat-text-warn">{{'validate.required' | translate}}</small>
               </div>
               <div class="pb-1">
                 <md-input-container style="width: 100%">
-                  <input mdInput placeholder="Department" type="text" [(ngModel)]="department" [formControl]="form.controls['department']">
+                  <input mdInput placeholder="{{'signup.department' | translate}}" type="text" [(ngModel)]="department" [formControl]="form.controls['department']">
                 </md-input-container>
-                <small *ngIf="form.controls['department'].hasError('required') && form.controls['department'].touched" class="mat-text-warn">You must include an department.</small>
+                <small *ngIf="form.controls['department'].hasError('required') && form.controls['department'].touched" class="mat-text-warn">{{'validate.required' | translate}}</small>
               </div>
               <div class="pb-1">
-                <md-checkbox>I have read and agree to the terms of service.</md-checkbox>
+                <md-checkbox>{{'signup.policy' | translate}}</md-checkbox>
               </div>
-              <button md-raised-button color="primary" class="btn-block" type="submit" [disabled]="!form.valid">Create your account</button>
+              <button md-raised-button color="primary" class="btn-block" type="submit" [disabled]="!form.valid">{{'signup.button.create' | translate}}</button>
             </div>
             <div class="pt-1 pb-1 text-xs-center">
-              <a [routerLink]="['/session/forgot']">Forgot password?</a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a [routerLink]="['/session/signin']">Access your account.</a>
+              <a [routerLink]="['/session/forgot']">{{'signup.link.forgot' | translate}}</a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a [routerLink]="['/session/signin']">{{'signup.link.login' | translate}}</a>
             </div>
           </form>
         </md-card-content>
